refactor: add Chinese Javadoc, standardize class names, clean metadata comments
1. Remove 42 metadata-only Javadoc blocks (@author/@date)
2. Add Chinese class-level Javadoc to 239 classes across all modules
3. Rename classes to descriptive names:
   - Boot/Main/X → domain-specific names (e.g. ThreadBasicDemo, ClassLoaderDemo)
   - XxxTest (non-JUnit) → XxxDemo (e.g. PatternTest → RegexDemo)
   - Basic/Test → descriptive names
   Total: 60 classes renamed
4. Align resources paths with package structure
5. Add scripts/ directory with reusable refactoring scripts:
   - merge_modules.sh: merge Maven modules by copying src/
   - refactor_packages.py: batch rename Java packages
   - rename_classes.py: batch rename Java classes with reference updates